# HELL

./: .gitignore  ARCHITECTURE.md  README.md  config.json  config.py  hell-cert.cer  main.py  project-structure.txt  sign.ps1
acm/: Cargo.toml
acm/src/: classifier.rs  lib.rs  main.rs
api/: server.py
attemptRatings/: ratings.json
control/: _experimaental_apps.py  _test_apps.py  _test_rating_store.py  almost_apps.py  apps.md  apps.py  launch_rating.py
core/: log.py  logger.py  orchestrator.py
dll-apps/: finder.py
docs/: ARCHITECTURE.md  REPOSITORY_GUIDE.md  VISUAL_ARCHITECTURE.md  WORKFLOW_DIAGRAM.md
finderr/: finder.py
gui/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest  gui.csproj
gui/Services/: Audioservice.cs  Hardwareservice.cs  Hellprocessservice.cs
gui/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
gui/Views/: MainWindow.axaml  MainWindow.axaml.cs  ModePickerDialog.axaml  ModePickerDialog.axaml.cs  StartupWindow.axaml  StartupWindow.axaml.cs
hell-rm/: cargo.toml
hell-rm/crates/app_finder/: Cargo.toml
hell-rm/crates/app_finder/src/: lib.rs  windowsapps.rs
lvm/: Cargo.toml
lvm/src/: lib.rs
pipeline/: classifier.py  dataset.py  extractor.py  intent.py  pipeline.py
stt/: _old_detector.py  detector.py  listener.py  transcriber.py
