[package]
name = "lvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "lvm"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "windef", "processthreadsapi", "psapi", "handleapi", "winnt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add pyo3 to bridge Rust and Python
pyo3 = { version = "0.20", features = ["extension-module"] }